--- a/studentduplicate/.gitignore
+++ b/studentduplicate/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .text
-
+.env
 # dependencies
 /node_modules
 /.pnp
