--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js", 
+    "postinstall": "npm rebuild bcrypt --build-from-source", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.1", 
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -18,5 +20,8 @@
     "mongoose": "^8.7.3",
     "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
